--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
   <body>
     <div id="intro">
       <p class="cloud1">
-        <img src="\cloud.png" alt="cloud1" />
+        <img src="cloud.png" alt="cloud1" />
       </p>
       <h1>I'm Haripriya.</h1>
       <h3 class="student">Proud to be learner as always in the World!</h3>
       <p class="cloud2">
-        <img src="\cloud.png" alt="cloud1" />
+        <img src="cloud.png" alt="cloud1" />
       </p>
     </div>
 
     <div class="profile">
-      <img class="me-img" src="\haripriya.jpg" alt="me-img" />
+      <img class="me-img" src="haripriya.jpg" alt="me-img" />
       <h2>Hello.</h2>
       <p class="myself">
         Myself, A student learing web development and graphic designing with
