--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haripriya</title>
-    <link rel="stylesheet" href="\index.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap"
@@ -40,7 +40,7 @@
 
     <div class="management">
       <h2>My Skills.</h2>
-      <img class="manage-img" src="\management.png" alt="management-img" />
+      <img class="manage-img" src="management.png" alt="management-img" />
       <h3>Management skill.</h3>
 
       <p class="manage-skill">
@@ -57,7 +57,7 @@
         Average Python developer. Currently learning Frontend development.<br />Being
         a creative person, I'm good at Graphic Designing.
       </p>
-      <img class="data-img" src="\management.png" alt="code-img" />
+      <img class="data-img" src="data.png" alt="code-img" />
     </div>
 
     <hr />
@@ -70,19 +70,19 @@
         class="footer-link"
         href="https://www.linkedin.com/in/hari-priya-n-0475b122b/"
         target="_blank"
-        ><img class="linkedin-img" src="\linkedin.png"
+        ><img class="linkedin-img" src="linkedin.png"
       /></a>
       <a
         class="footer-link"
         href="https://twitter.com/Haripriya102004"
         target="_blank"
-        ><img class="twitter-img" src="\twitter.png"
+        ><img class="twitter-img" src="twitter.png"
       /></a>
       <a
         class="footer-link"
         href="https://www.instagram.com/myself_haripriya/"
         target="_blank"
-        ><img class="instagram-img" src="\instagram.png"
+        ><img class="instagram-img" src="instagram.png"
       /></a>
       <p class="copyright">
         ©
