--- a/index.html
+++ b/index.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Haripriya</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"
+      integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+      integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy"
+      crossorigin="anonymous"
+    ></script>
+
     <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -15,80 +33,109 @@
       href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
       rel="stylesheet"
     />
+
+    <!-- fontawesome -->
+    <script
+      src="https://kit.fontawesome.com/2efe8defcf.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <div id="intro">
+    <div class="container-fluid">
       <p class="cloud1">
-        <img src="cloud.png" alt="cloud1" />
+        <img src="cloud.png" alt="cloud" />
       </p>
-      <h1>I'm Haripriya.</h1>
+      <h1>I'm Haripriya</h1>
       <h3 class="student">Proud to be learner as always in the World!</h3>
       <p class="cloud2">
-        <img src="cloud.png" alt="cloud1" />
+        <img src="cloud.png" alt="cloud" />
       </p>
     </div>
-
-    <div class="profile">
-      <img class="me-img" src="haripriya.jpg" alt="me-img" />
-      <h2>Hello.</h2>
-      <p class="myself">
-        Myself, A student learing web development and graphic designing with
-        delight!
-      </p>
-    </div>
+    <section id="intro">
+      <div class="profile container-fluid">
+        <img class="me-img" src="haripriya.jpg" alt="me-img" />
+        <h2 class="hello">Hello!</h2>
+        <h3 class="myself">
+          Myself, A student learing web development and graphic designing with
+          delight!
+        </h3>
+      </div>
+    </section>
     <hr />
-
-    <div class="management">
+    <section id="skill">
       <h2>My Skills.</h2>
-      <img class="manage-img" src="management.png" alt="management-img" />
-      <h3>Management skill.</h3>
+      <div class="container-fluid ms-auto me-auto row">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <img class="skill-img" src="management.png" alt="management-img" />
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <h3>Management skill.</h3>
+          <p class="manage-skill">
+            I'm pretty good at managing people and lead the team in right
+            track.<br />
+            Solvig problem is one of my best skill ever. I love to speak that's
+            why I stand in front of oppurtunities to be a speaker.
+          </p>
+        </div>
+      </div>
 
-      <p class="manage-skill">
-        I'm pretty good at managing people and lead the team in right track.<br />
-        Solvig problem is one of my best skill ever.<br />
-        I love to speak that's why I stand in front of oppurtunities to be a
-        speaker.
-      </p>
-    </div>
-
-    <div class="skill-soft">
-      <h3 class="software-skill">Software Skill.</h3>
-      <p class="code-skill">
-        Average Python developer. Currently learning Frontend development.<br />Being
-        a creative person, I'm good at Graphic Designing.
-      </p>
-      <img class="data-img" src="data.png" alt="code-img" />
-    </div>
+      <div class="skill-soft row container-fluid">
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <h3 class="software-skill">Software Skill.</h3>
+          <p class="code-skill">
+            Average Python developer. Currently learning Frontend
+            development.<br />Being a creative person, I'm good at Graphic
+            Designing.
+          </p>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-12">
+          <img class="skill-img" src="data.png" alt="code-img" />
+        </div>
+      </div>
+    </section>
 
     <hr />
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <a class="btn" href="mailto:nharipriya07102004@outlook.com">mail me</a>
-    </div>
-    <div class="bottom-container">
-      <a
-        class="footer-link"
-        href="https://www.linkedin.com/in/hari-priya-n-0475b122b/"
-        target="_blank"
-        ><img class="linkedin-img" src="linkedin.png"
-      /></a>
-      <a
-        class="footer-link"
-        href="https://twitter.com/Haripriya102004"
-        target="_blank"
-        ><img class="twitter-img" src="twitter.png"
-      /></a>
-      <a
-        class="footer-link"
-        href="https://www.instagram.com/myself_haripriya/"
-        target="_blank"
-        ><img class="instagram-img" src="instagram.png"
-      /></a>
-      <p class="copyright">
-        ©
-        <a href="#intro"> Haripriya</a>
-        . All rights reserved
-      </p>
-    </div>
+    <section id="contact">
+      <div class="container-fluid">
+        <h2>Get In Touch</h2>
+        <a class="btn" href="mailto:nharipriya07102004@outlook.com">mail me</a>
+      </div>
+    </section>
+    <section id="footer">
+      <div>
+        <div class="social-media-icon">
+          <a
+            class="footer-link"
+            href="https://www.linkedin.com/in/hari-priya-n-0475b122b/"
+            target="_blank"
+          >
+            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="social-media-icon">
+          <a
+            class="footer-link"
+            href="https://twitter.com/Haripriya102004"
+            target="_blank"
+          >
+            <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+        <div class="social-media-icon">
+          <a
+            class="footer-link"
+            href="https://www.instagram.com/myself_haripriya/"
+            target="_blank"
+          >
+            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+          </a>
+        </div>
+        <p class="copyright">
+          ©
+          <a href="#intro" class="back-link"> Haripriya</a>
+          .All rights reserved
+        </p>
+      </div>
+    </section>
   </body>
 </html>
