--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This is my first ever personal website built by me for learning purpose"
+    />
     <title>Haripriya</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -41,16 +45,18 @@
     ></script>
   </head>
   <body>
-    <div class="container-fluid">
-      <p class="cloud1">
-        <img src="cloud.png" alt="cloud" />
-      </p>
-      <h1>I'm Haripriya</h1>
-      <h3 class="student">Proud to be learner as always in the World!</h3>
-      <p class="cloud2">
-        <img src="cloud.png" alt="cloud" />
-      </p>
-    </div>
+    <section id="first">
+      <div class="container-fluid">
+        <p class="cloud1">
+          <img src="cloud.png" alt="cloud" />
+        </p>
+        <h1>I'm Haripriya</h1>
+        <h3>Proud to be learner as always in the World!</h3>
+        <p class="cloud2">
+          <img src="cloud.png" alt="cloud" />
+        </p>
+      </div>
+    </section>
     <section id="intro">
       <div class="profile container-fluid">
         <img class="me-img" src="haripriya.jpg" alt="me-img" />
@@ -70,9 +76,8 @@
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
           <h3>Management skill.</h3>
-          <p class="manage-skill">
-            I'm pretty good at managing people and lead the team in right
-            track.<br />
+          <p class="skill-text">
+            I'm pretty good at managing people and lead the team in right track.
             Solvig problem is one of my best skill ever. I love to speak that's
             why I stand in front of oppurtunities to be a speaker.
           </p>
@@ -81,15 +86,14 @@
 
       <div class="skill-soft row container-fluid">
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <h3 class="software-skill">Software Skill.</h3>
-          <p class="code-skill">
-            Average Python developer. Currently learning Frontend
-            development.<br />Being a creative person, I'm good at Graphic
-            Designing.
-          </p>
+          <img class="skill-img" src="data.png" alt="code-img" />
         </div>
         <div class="col-lg-6 col-md-6 col-sm-12">
-          <img class="skill-img" src="data.png" alt="code-img" />
+          <h3>Software Skill.</h3>
+          <p class="skill-text">
+            Average Python developer. Currently learning Frontend
+            development.Being a creative person, I'm good at Graphic Designing.
+          </p>
         </div>
       </div>
     </section>
@@ -97,7 +101,7 @@
     <hr />
     <section id="contact">
       <div class="container-fluid">
-        <h2>Get In Touch</h2>
+        <h2>Introduce yourself.</h2>
         <a class="btn" href="mailto:nharipriya07102004@outlook.com">mail me</a>
       </div>
     </section>
@@ -109,7 +113,7 @@
             href="https://www.linkedin.com/in/hari-priya-n-0475b122b/"
             target="_blank"
           >
-            <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-instagram fa-1x" aria-hidden="true"></i>
           </a>
         </div>
         <div class="social-media-icon">
@@ -118,7 +122,7 @@
             href="https://twitter.com/Haripriya102004"
             target="_blank"
           >
-            <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-linkedin fa-1x" aria-hidden="true"></i>
           </a>
         </div>
         <div class="social-media-icon">
@@ -127,12 +131,12 @@
             href="https://www.instagram.com/myself_haripriya/"
             target="_blank"
           >
-            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+            <i class="fa fa-twitter fa-1x" aria-hidden="true"></i>
           </a>
         </div>
         <p class="copyright">
           ©
-          <a href="#intro" class="back-link"> Haripriya</a>
+          <a href="#first" class="back-link"> Haripriya</a>
           .All rights reserved
         </p>
       </div>
